# halo2-shielded-pool

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  pool.rs  primitives.rs
src/circuits/: mod.rs  poseidon.rs  withdraw.rs
src/primitives/: merkle.rs  mod.rs  note.rs  poseidon.rs
tests/: poseidon_spike.rs
